fix: scroll bar behavior on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,11 +35,11 @@ footer {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-main::-webkit-scrollbar {
+body::-webkit-scrollbar {
   display: none;
 }
 
-main {
+body {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
